[project]
name = "fs-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Alejandro Ouslan" },
  { email = "alejandro.ouslan@upr.edu" },
]
license = { file = "LICENSE" }
dependencies = [
  "altair[all]>=5.5.0",
  "duckdb>=1.1.3",
  "duckdb-engine>=0.15.0",
  "geopandas>=1.0.1",
  "ibis-framework[geospatial,duckdb]>=9.5.0",
  "polars>=1.19.0",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.37",
  "tqdm>=4.67.1",
  "vegafusion[embed]>=2.0.2",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "matplotlib>=3.10.0", "pynvim>=0.5.2"]
