[project]
name = "fsdc-security"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
  "altair[all]>=6.1.0",
  "censusforge>=1.0.0",
  "duckdb>=1.4.3",
  "geopandas>=1.1.1",
  "jp-tools>=0.5.4",
  "polars>=1.36.1",
  "pyarrow>=24.0.0",
  "python-dotenv>=1.2.2",
  "shapely>=2.1.2",
]

[project.scripts]
fsdc-security = "fsdc_security:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "jupytext>=1.18.1",
  "pre-commit>=4.5.1",
  "pynvim>=0.6.0",
]
